# spapi

./: .gitmodules  cabal  cabal-ghcjs  cabal-ghcjs.project  cabal.project  default.nix  runshell.nix
backend/: backend.cabal
backend/src/: Main.hs
common/: common.cabal
common/src/: API.hs
docs/: arb.css  index.html
docs/js/: all.js
frontend/src/: Main.hs
semantic-reflex-example/: semantic-reflex-example.cabal
semantic-reflex-example/src/: Example.hs
spapi-common/: spapi-common.cabal
spapi-common/src/: API.hs
spapi-reflex/: Main.hs  spapi-reflex.cabal
spapi-reflex/src/: ARBView.hs  App.hs  Console.hs  Example.hs  Sample.hs  StatusView.hs  Util.hs
spapi-server/: spapi-server.cabal
spapi-server/app/spapi-server/: Main.hs  Worker.hs
spapi-server/src/: Handler.hs  Main.hs  Worker.hs
spapi-server/src/SemanticParserAPI/Server/: Handler.hs  Type.hs  Worker.hs
